<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_giving"
        android:icon="@drawable/ic_nav_give"
        android:title="@string/nav_giving" />
    <item
        android:id="@+id/nav_announcements"
        android:icon="@drawable/ic_nav_announcement"
        android:title="@string/nav_announcements" />
    <item
        android:id="@+id/nav_devotionals"
        android:icon="@drawable/ic_nav_devotional"
        android:title="@string/nav_devotionals" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/nav_profile" />
</menu>
